P3_MARCO_GARCIA_PABLO_ROIG/tests/valid/06_functions_calls.lava
int sum(int a, int b) {
  return a + b;
}
int value = sum(2, 3);
print(value);
