P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/31_invalid_record_equality.lava
record Point(int x);
Point a = new Point(1);
Point b = new Point(2);
boolean same = a == b;
